# cppunittests

./: .clangd  .gitignore  CMakeLists.txt  container-check.sh  devcontainer.sh
.devcontainer/: Dockerfile  config.fish  config.kdl  devcontainer.json  docker-compose.yml  entrypoint.sh  starship.toml
src/: main.cpp
tests/: tests.cpp
